# learn-transformers

./: .gitignore  main.py  pyproject.toml  quicktour.ipynb
Llama-2-7b-hf/.hfd/: repo_metadata.json
base_classes/models/: how_to_hack_models.py  large_models.py  loading_models.py
base_classes/models/custom_models/: test.py
base_classes/models/custom_models/resnet_model/: configuration_resnet.py
base_classes/models/task_summary/: automatic-speech-recognition.py  depth-estimation.py  image-classification.py  image-segmentation.py  language-modeling-masked.py  object-detection.py  question-answering.py  summarization.py  translation.py
base_models/models/: custom_models.py
base_models/models/custom_models/resnet_model/: config.json  modeling_resnet.py
base_models/models/task_summary/: audio-classification.py  document-question-answering.py  language-modeling-causal.py  text-classification.py
get_started/: quicktour.ipynb
get_started/quicktour/: pipeline.py  pretrained-models  setup.py
quicktour/: tensorflow.py  trainer.py
resources/task_recipes/nlp/: sequence_classification.ipynb  sequence_classification.py
transformers_doc/en/pytorch/: question_answering.ipynb  token_classification.ipynb
